# front_mtb

./: .dockerignore  .gitignore  Dockerfile.backend  RAILWAY_DEPLOY.md  README.md  docker-compose.yml  package-lock.json  package.json  railway.json
.playwright-cli/: page-2026-04-15T17-29-47-195Z.yml
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.json  requirements.txt
apps/api/app/: __init__.py  analytics.py  api.py  bootstrap.py  db.py  engine.py  main.py  models.py  quests.py  queue.py  schemas.py  worker.py
apps/api/app/core/: __init__.py  config.py  formulas.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: test_admin_demo.py  test_engine.py  test_routes.py
apps/web/: .env.example  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: main.tsx  styles.css  styles.test.ts
apps/web/src/app/: providers.tsx  router.test.ts  router.tsx
apps/web/src/components/: GalaxyStage.tsx  OnboardingOverlay.tsx  OverviewCopy.test.tsx  PlanetInspector.tsx  PlanetVisual.tsx
apps/web/src/lib/: api.test.ts  api.ts  bonus-engine.test.ts  fe2-api.ts  (+16 more)
docs/superpowers/plans/: 2026-04-23-banking-planet-actions.md  2026-04-23-mobile-first-app-shell.md  2026-04-23-remove-monetary-ui-language.md  2026-04-23-social-ai-qr-mvp.md
docs/superpowers/specs/: 2026-04-23-contacts-unified-screen-design.md  2026-04-23-mobile-first-app-shell-design.md  2026-04-23-remove-monetary-reward-language-design.md  2026-04-23-social-ai-qr-mvp-design.md
output/doc/: mtb_galaxy_plan.docx
scripts/: generate_mtb_plan_doc.py  serve-web.mjs
(+43 files in other folders)
